# kaggle_agent

./: CLAUDE.md  PROJECT_CHECKLIST.md  README_AUTONOMOUS_AGENT_COLLABORATION.md  README_AUTONOMOUS_FINAL_BOSS.md  README_FINAL_BOSS_OPERATIONS.md  README_V_MODEL_TDD_SYSTEM.md
docs/: boss_instructions.md  database_design.md  implementation_best_practices.md  instruction_final_boss.md  multiagent_tmux_guide.md  project_structure.md  requirements.md  worker_instructions.md
orgs/org-01/01worker-a/: CLAUDE.md  PROJECT_CHECKLIST.md  WORKER_CHECKLIST.md
orgs/org-01/01worker-b/: .tmux.conf  CLAUDE.md  WORKER_CHECKLIST.md
orgs/org-01/01worker-c/orgs/org-01/01worker-c/orgs/org-01/01worker-b/: pyproject.toml
orgs/org-01/docs/: hello_world.md
scripts/: agent_communicator.sh  apply_minor_fixes.sh  assign_task_to_boss.sh  auto_scheduler.sh  autonomous_org_manager.sh  boss_receive_message.sh  boss_send_message.sh  check_all_workers_done.sh  create_multiagent_tmux.sh  create_task_unit.sh  daily_operations.sh  final_boss_assign_next.sh  final_boss_cleanup.sh  final_boss_tdd_manager.sh  final_boss_watcher.sh  integrate_to_main.sh  quality_evaluation.py  recreate_single_org.sh  setup_multiagent_worktree.sh  start_autonomous_agents.sh
shared/: tdd_implementation_checklist.md
shared/instructions/: boss_tdd_instructions.md  final_boss_tdd_instructions.md  worker_tdd_instructions.md
tasks/: data_processing_foundation_checklist.md  data_processing_foundation_requirements.md  feature_engineering_checklist.md  feature_engineering_requirements.md
tests/fixtures/: api_responses.py
(+255 files in other folders)
